// Copyright 2016 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package recipe_engine;

// Arguments is a protobuf that can be supplied to the recipe engine through its
// "--operational-args-path" command-line parameter in JSONPB format.
message Arguments {
  reserved 1;

  // Message containing the set of supported annotation control flags.
  message AnnotationFlags {
    // If true, emit CURRENT_TIMESTAMP annotations.
    bool emit_timestamp = 1;

    // If true, emit all input properties as annotations at the beginning of
    // recipe engine execution.
    bool emit_initial_properties = 2;
  }
  // Annotation control flags.
  AnnotationFlags annotation_flags = 2;

  // Any flags to pass to the recipe engine. Used to toggle on new behavior,
  // like sending logs through logdog.
  message EngineFlags {
    // DEPRECATED, DO NOT USE. Will be removed soon.
    bool use_result_proto = 1;
  }
  EngineFlags engine_flags = 4;
}
